Translated my comment to English

--- a/uml/Makefile
+++ b/uml/Makefile
@@ -1,4 +1,4 @@
-# OBS! skapa en egen output mapp!
+# Please note that one has to add an ouput folder in order for this to work.
 # Define variables
 PLANTUML := java -jar plantuml.jar
 PUML_FILES := $(wildcard *.puml)
