Using Properties instead of hardcoding paths, file names and classes for factories.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,11 @@
 se.kth.iv1350.discount_strategy_classname=se.kth.iv1350.integration.pricing.MemberDiscount,se.kth.iv1350.integration.pricing.StaffDiscount,se.kth.iv1350.integration.pricing.Promotion
 se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.vat.SwedishVAT
 se.kth.iv1350.database.file.location=data/db
-se.kth.iv1350.data.log=data
-se.kth.iv1350.accounting.flat_file_db=accounting.csv
-se.kth.iv1350.customer.flat_file_db=customers.csv
-se.kth.iv1350.inventory.flat_file_db=inventory_items.csv
-se.kth.iv1350.vat.flat_file_db=vat.csv
-se.kth.iv1350.csv_delimiter=;
+se.kth.iv1350.database.file.accounting_db=accounting.csv
+se.kth.iv1350.database.file.customer_db=customers.csv
+se.kth.iv1350.database.file.inventory_db=inventory_items.csv
+se.kth.iv1350.log.file.location=data/log
+se.kth.iv1350.log.file.revenue_log=revenue-log.txt
+se.kth.iv1350.log.file.error_log=error-log.txt
+se.kth.iv1350.database.file.vat_db=vat.csv
+se.kth.iv1350.database.file.csv_delimiter=;
