--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-se.kth.iv1350.discount_strategy_classname=se.kth.iv1350.integration.pricing.MemberDiscount,se.kth.iv1350.integration.pricing.StaffDiscount,se.kth.iv1350.integration.pricing.Promotion
+se.kth.iv1350.discount_strategy_classname=se.kth.iv1350.integration.pricing.MemberDiscount,se.kth.iv1350.integration.pricing.StudentDiscount,se.kth.iv1350.integration.pricing.Promotion
 se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.vat.SwedishVAT
 se.kth.iv1350.database.file.location=data/db
 se.kth.iv1350.database.file.accounting_db=accounting.csv
