Updated gitignore to exclude notes, and reflections, minted, csv and log/txt files.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,17 @@ replay_pid*
 
 #Java output
 out/
+
+# LaTeX
+*minted*/
+
+# certain csv and txt
+*_*.csv
+*log*.txt
+
+# notes
+notes*.*
+*reflection*.*
+
+# prev folders
+uml/prev-uml/
