The flat file database classes are now chosen through a config file.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,8 @@
 se.kth.iv1350.discount_strategy_classname=se.kth.iv1350.integration.pricing.MemberDiscount,se.kth.iv1350.integration.pricing.StudentDiscount,se.kth.iv1350.integration.pricing.Promotion
 se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.vat.SwedishVAT
+se.kth.iv1350.database.accounting_db.classname=se.kth.iv1350.integration.AccountingSystemFlatFileDB
+se.kth.iv1350.database.customer_db.classname=se.kth.iv1350.integration.CustomerRegistryFlatFileDB
+se.kth.iv1350.database.inventory_db.classname=se.kth.iv1350.integration.ItemRegistryFlatFileDB
 se.kth.iv1350.database.file.location=test-data/db
 se.kth.iv1350.database.file.accounting_db=accounting.csv
 se.kth.iv1350.database.file.customer_db=customers.csv
