All classes in vat package moved to pricing. Added a runtime exception for the pricing strategies (vat, discount) called PricingFailedException.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -9,7 +9,7 @@ se.kth.iv1350.discount_strategy_classname=\
   ,se.kth.iv1350.integration.pricing.StudentDiscount\
   ,se.kth.iv1350.integration.pricing.Promotion
 ## Vat-Strategies
-se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.vat.SwedishVAT
+se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.pricing.SwedishVAT
 ## Integration
 se.kth.iv1350.database.accounting_db.classname=\
   se.kth.iv1350.integration.AccountingSystemFlatFileDB
