--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,7 +6,7 @@ se.kth.iv1350.log.file.error_log=error-log.txt
 ## Discount-Strategies
 se.kth.iv1350.discount_strategy_classname=se.kth.iv1350.integration.pricing.MemberDiscount,se.kth.iv1350.integration.pricing.StudentDiscount,se.kth.iv1350.integration.pricing.Promotion
 ## Vat-Strategies
-se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.vat.SwedishVAT
+se.kth.iv1350.vat_strategy.classname=se.kth.iv1350.integration.pricing.SwedishVAT
 ## Integration
 se.kth.iv1350.database.accounting_db.classname=se.kth.iv1350.integration.AccountingSystemFlatFileDB
 se.kth.iv1350.database.customer_db.classname=se.kth.iv1350.integration.CustomerRegistryFlatFileDB
